Convert to static site with serverless function
- Configure Next.js for static export (output: 'export')
- Move API route to serverless function (functions/booking/)
- Update BookingForm to use configurable API endpoint
- Add deployment documentation
- Remove server-side API routes

This enables:
- Static hosting (cheaper, faster)
- Serverless function for booking API (secure, scalable)
- Facebook Pixel, Google Maps work client-side
- POST to Gym Master via serverless function

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,8 +1,16 @@
-# Gym Master API Configuration
-# Get these values from Gym Master API documentation
-GYMMASTER_API_KEY=your_api_key_here
-GYMMASTER_SERVICE_ID=your_service_id_for_free_intro
-GYMMASTER_LOCATION_ID=your_kelowna_location_id
+# Google Maps API Key (required for map display)
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# Booking API Endpoint (serverless function URL)
+# For local development, you can use /api/booking
+# For production, use your DigitalOcean Function URL
+NEXT_PUBLIC_BOOKING_API_URL=https://faas-tor1-70ca848e.doserverless.co/api/v1/web/fn-XXXXX/vi-fit/booking
+
+# Gym Master API Configuration (set in serverless function environment)
+# These are NOT needed in the static site, only in the serverless function
+# GYMMASTER_API_KEY=your_api_key_here
+# GYMMASTER_SERVICE_ID=your_service_id_for_free_intro
+# GYMMASTER_LOCATION_ID=your_kelowna_location_id
 
 # Analytics (Optional)
 # NEXT_PUBLIC_GA_ID=G-74JRYYGX3C
