Fix PageLogo: use black icon, reduce size by 75%, improve spacing

--- a/.do/app-static.yaml
+++ b/.do/app-static.yaml
@@ -14,7 +14,7 @@ static_sites:
   source_dir: /
   environment_slug: node-js
   build_command: npm install && npm run build
-  output_dir: .next/server/app
+  output_dir: out
   envs:
   - key: NEXT_PUBLIC_GOOGLE_MAPS_API_KEY
     value: ${NEXT_PUBLIC_GOOGLE_MAPS_API_KEY}
