--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,6 @@
 # Google Maps API Key (required for map display)
+# Get from: https://console.cloud.google.com/
+# Enable: "Maps Embed API" (NOT "Maps JavaScript API")
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
 # Booking API Endpoint (serverless function URL)
